Correct Trend card text and spacing, stylize h1
Added span elements to h1 to stylize text closer to The Good Place's title card.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --bg-theme: #65b891;
+    --bg-theme: #6DB966;
     --bg-theme2: #e7e8f8;
     --bg-theme3: #f8d7ff;
     --dark-font: rgb(75, 76, 82);
@@ -31,6 +31,9 @@ body {
     grid-template-columns: max(15vw, 275px);
     grid-template-rows: max-content 1fr;
     font-family: "Josefin Sans", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;;
+}
+span.big-letter {
+    font-size: calc(1em + 0.2em);
 }
 header {
     background-color: var(--bg-theme3);
@@ -163,7 +166,7 @@ main {
     padding: var(--default-pad);
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
     grid-auto-rows: max-content;
 
     h3 {
@@ -215,9 +218,10 @@ main {
 
 #trend-wrapper>ul {
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, auto);
     grid-auto-flow: column;
     gap: 10px;
+    align-items: start;
     li {
         display: grid;
         grid-template-columns: 75px 2fr;
@@ -231,10 +235,10 @@ main {
     }
 }
 
-#trend-wrapper ul>li p:first-child {
+#trend-wrapper ul li p:first-of-type {
     color: #000;
     font-size: 1.1em;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 
